--- a/Private Discord Bot/pom.xml
+++ b/Private Discord Bot/pom.xml
@@ -13,6 +13,13 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>5.0.0-alpha.18</version>
+        </dependency>
+    </dependencies>
 </project>
 <dependency>
 <groupId>net.dv8tion</groupId>
